<resources>
    <string name="app_name">Wi-Fi Analyzer</string>

    <string name="menu_wifi">Wi-Fi</string>
    <string name="menu_device">Устройство</string>
    <string name="menu_speed">Скорость</string>

    <string name="bar_title_wifi">Список Wi-Fi сетей</string>
    <string name="bar_title_device">Информация об устройстве</string>
    <string name="bar_title_speed">Тест скорости Wi-Fi</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>

    <string name="scan">Сканировать</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отмена</string>

    <string name="input_comment">Введите комментарий</string>
    <string name="enable_wifi">Подключитесь к  wi-fi для теста скорости</string>
</resources>
