<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <ProgressBar
        android:id="@+id/report_dialog_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminate="false"
        android:foregroundGravity="center"
        android:max="100"/>

    <TextView
        android:id="@+id/dialog_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorBlack"
        android:textSize="22sp"
        android:text="Отправить отчет"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp" />

    <RelativeLayout
        android:id="@+id/report_dialog_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/location_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" />

        <EditText
            android:id="@+id/report_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_spinner"
            android:hint="@string/input_comment"
            android:maxLines="1"
            android:inputType="text"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/close_report_dialog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_toStartOf="@id/send_report_btn"
            android:layout_below="@id/report_comment"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/send_report_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_below="@id/report_comment"
            android:layout_margin="16dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>